Upgrade Hudi version in Presto-hudi module to 1.0.2
Batch calls to metastore for fetching partitions